# wt_example

./: .clang-format  .gitignore  .gitmodules.bup  .travis.yml  CMakeLists.txt  README.md  build.ps1  build.sh  format.sh  run_debug.ps1  run_release.ps1
include/: global.hpp  hello_application.hpp
src/: hello_application.cpp  main.cpp
